scripts/nullaway/annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8.txt
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/builder/AbstractHugeCollectionBuilder.java:205: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return elementConverter;
		^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/builder/AbstractHugeCollectionBuilder.java:216: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return memoryManager;
		^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/AbstractHugeHashMap.java:54: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.keyConverter = keyConverter;
		                  ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/AbstractHugeHashMap.java:55: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.valueConverter = valueConverter;
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/AbstractListTest.java:21: error: [NullAway] passing @Nullable parameter 'initial' where @NonNull is required
		return createList(initial);
		                  ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/AbstractImmutableHugeHashSetTest.java:26: error: [NullAway] parameter initial is @NonNull, but parameter in superclass method ch.obermuhlner.jhuge.collection.AbstractSetTest.<T>createSet(T...) is @Nullable
	protected <E> Set<E> createSet(E... initial) {
	                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/AbstractHugeHashSet.java:243: error: [NullAway] @NonNull field AbstractHugeHashSet$AbstractHugeHashSetIterator.currentValue not initialized
		private long[] currentValue;
		               ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/AbstractHugeHashSetTest.java:26: error: [NullAway] parameter initial is @NonNull, but parameter in superclass method ch.obermuhlner.jhuge.collection.AbstractSetTest.<T>createSet(T...) is @Nullable
	protected <E> Set<E> createSet(E... initial) {
	                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/HashSetTest.java:14: error: [NullAway] parameter initial is @NonNull, but parameter in superclass method ch.obermuhlner.jhuge.collection.AbstractSetTest.<T>createSet(T...) is @Nullable
	protected <T> Set<T> createSet(T... initial) {
	                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/builder/AbstractHugeMapBuilder.java:288: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return memoryManager;
		^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/internal/HugeIntLongArrayMap.java:82: error: [NullAway] method returns @Nullable, but superclass method ch.obermuhlner.jhuge.collection.internal.IntLongArrayMap.get(int) returns @NonNull
	public long[] get(int key) {
	              ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/collection/internal/PrimitiveIntLongArrayMap.java:42: error: [NullAway] method returns @Nullable, but superclass method ch.obermuhlner.jhuge.collection.internal.IntLongArrayMap.get(int) returns @NonNull
	public long[] get(int key) {
	              ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/memory/MemoryMappedFileManager.java:76: error: [NullAway] assigning @Nullable expression to @NonNull field
	private final LongArray allocatedBlocksList = DEBUG ? new PrimitiveLongArray() : null;
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/example/PlanetInformation.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Map<Integer, PlanetInfo> planetMap = null;
	                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/example/PlanetInformation.java:168: error: [NullAway] dereferenced expression planetInfo is @Nullable
		System.out.println("ID   : " + planetInfo.getId());
		                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/converter/IntegerConverter.java:19: error: [NullAway] unboxing of a @Nullable value
		int value = source;
		            ^
    (see http://t.uber.com/nullaway )
../annotator/url2b521cbda7_eobermuhlner_jhuge_tgz-pJ8-ch_obermuhlner_jhuge_example_MeasureHeapJ8/src/ch/obermuhlner/jhuge/converter/LongConverter.java:19: error: [NullAway] unboxing of a @Nullable value
		long value = source;
		             ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
